@@ -1,3 +1,8 @@
+2017-08-04  Richard Biener  <rguenther@suse.de>
+
+	PR middle-end/81705
+	* c-c++-common/ubsan/pr81705.c: New testcase.
+
 2017-08-03  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	* gcc.target/powerpc/bfp/scalar-cmp-exp-eq-2.c: Adjust for error
